--- a/cicon_qc/views/qc_summary_view.xml
+++ b/cicon_qc/views/qc_summary_view.xml
@@ -32,6 +32,7 @@
                     <field name="issued_date"/>
                     <field name="page_number"/>
                     <field name="quantity" />
+                    <field name="material_status"/>
 				</tree>
 			</field>
 		</record>
@@ -55,9 +56,12 @@
                             <field name="dn_date"/>
                             <field name="delivery_date"/>
                         </group>
-                        <group>
+                        <group col="4">
+                            <field name="vehicle_number"/>
                             <field name="wb_ticket"/>
                             <field name="loading_list"/>
+                        </group>
+                        <group>
                             <field name="company_id" options="{'no_create': True,'no_open': True}"/>
                         </group>
                         <group>
