--- a/cmms/views/cmms_store_view.xml
+++ b/cmms/views/cmms_store_view.xml
@@ -199,9 +199,9 @@
 			<field name="arch" type="xml" >
                 <search string="Store Invoice Line" >
                     <field name="invoice_id"/>
-
                     <field name="job_order_id"/>
                     <field name="machine_id"/>
+                    <field name="product_desc"/>
                     <filter name="last_month" string="Last Month" domain="[('invoice_id.invoice_date','&gt;=',(context_today()-relativedelta(months=1)).strftime('%%Y-%%m-01')),('invoice_id.invoice_date','&lt;',time.strftime('%%Y-%%m-01'))]" />
                     <seperator/>
                     <filter name="this_month" string="This Month" domain="[('invoice_id.invoice_date','&gt;=',(context_today()).strftime('%%Y-%%m-01')),('invoice_id.invoice_date','&lt;',(context_today()+relativedelta(months=1)).strftime('%%Y-%%m-01'))]" />
