--- a/cicon_tech/report/submittal_print_view.xml
+++ b/cicon_tech/report/submittal_print_view.xml
@@ -24,7 +24,7 @@
        <div class="header">
         <div class="row zero_min_height">
             <div class="col-xs-2">
-                <img t-if="company.logo" t-att-src="'data:image/png;base64,%s' % company.logo" style="max-height: 70px;"/>
+                <img t-if="company.logo" t-att-src="'data:image/png;base64,%s' % company.logo" style="max-height: 65px;max-width: 160px;"/>
             </div>
             <div class="col-xs-8 text-center">
                 <h4 class="text-center cicon-head-font">
@@ -49,7 +49,7 @@
             </div>
             <!--<div class="col-xs-8 text-left" style="margin-top:25px;padding-left:25px;" t-field="company.rml_header1"/>-->
             <div class="col-xs-2 text-center">
-                <img t-if="company.logo2" t-att-src="'data:image/png;base64,%s' % company.logo2" style="max-height: 65px;"/>
+                <img t-if="company.logo2" t-att-src="'data:image/png;base64,%s' % company.logo2" style="max-height: 65px; max-width: 160px; padding-right: 30px"/>
             </div>
         </div>
         <div class="row zero_min_height">
