--- a/res_company_extn/views/res_company_extn_view.xml
+++ b/res_company_extn/views/res_company_extn_view.xml
@@ -2,13 +2,13 @@
 <odoo>
     <data>
 
-         <record id="view_company_form_extn" model="ir.ui.view">
+         <record id="view_company_form_extn_logo" model="ir.ui.view">
         <field name="name">res.company.form.extn</field>
         <field name="model">res.company</field>
         <field name="inherit_id" ref="base.view_company_form"/>
         <field name="arch" type="xml">
             <field name="logo" position="after">
-                 <field name="logo2"  widget="image" class="oe_right"/>
+                 <field name="logo2"  widget="image" class="oe_avatar oe_right"/>
             </field>
         </field>
         </record>
