--- a/cmms/views/cmms_store_view.xml
+++ b/cmms/views/cmms_store_view.xml
@@ -172,7 +172,7 @@
             <field name="model">cmms.store.invoice.line</field>
             <field name="arch" type="xml">
                 <pivot string="Invoice Line">
-                    <field name="machine_id" type="row"/>
+                    <field name="machine_category_id" type="row"/>
                     <field name="spare_part_type_id" type="col"/>
                     <field name="amount"  type="measure"/>
                 </pivot>
@@ -201,6 +201,7 @@
                     <field name="invoice_id"/>
                     <field name="job_order_id"/>
                     <field name="machine_id"/>
+                    <field name="machine_category_id" />
                     <field name="product_desc"/>
                     <filter name="last_month" string="Last Month" domain="[('invoice_id.invoice_date','&gt;=',(context_today()-relativedelta(months=1)).strftime('%%Y-%%m-01')),('invoice_id.invoice_date','&lt;',time.strftime('%%Y-%%m-01'))]" />
                     <seperator/>
