--- a/cmms/views/cmms_machine_view.xml
+++ b/cmms/views/cmms_machine_view.xml
@@ -220,6 +220,7 @@
                 <tree string="Machine Type" editable="bottom">
                     <field name="sequence" widget="handle"/>
                     <field name="name"/>
+                    <field name="name_report"/>
                     <field name="active"/>
                 </tree>
             </field>
