--- a/cmms/views/inventory_expense_reports.xml
+++ b/cmms/views/inventory_expense_reports.xml
@@ -14,7 +14,9 @@
                      <tbody>
                          <t t-foreach="docs" t-as="o">
                             <tr>
-                                <th class="text-center" colspan="2"> <span t-field="o.name"/> </th>
+                                <th class="text-center" colspan="2">
+                                    <span t-field="o.name_report"/>
+                                </th>
                             </tr>
                          <t t-set="categs" t-value="get_category(o)"/>
                          <t t-foreach="categs" t-as="c">
@@ -84,7 +86,7 @@
                                     </t>
                                     </tbody>
                                 </table>
-                             <p style="page-break-after:always;">   </p>
+                             <p style="page-break-after:always;"></p>
                          </t>
                      </t>
             </div>
